# molcollisions

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
examples/: basic_gp_demo.ipynb
experiments/: analyze_bo_results.py  analyze_collisions.py  analyze_regression_results.py  bo.py  dockstring-regression.py  generate_figures.py  regression.py  regression_experiments.yaml  tukey.py  tukey_hsd.py
experiments/configs/: bo_experiments.yaml  regression_config.py  regression_experiments.yaml
experiments/results/: bo_summary.csv  regression_summary.csv  tukey_summary_opt.csv
experiments/results/collisions/: full.csv  pairs.csv  pairs_summary.csv  test.csv  train.csv
experiments/results/regression/ESR2/compressed1024-r2/: trial_00.pkl  trial_01.pkl  trial_02.pkl  trial_03.pkl  trial_04.pkl  trial_05.pkl  trial_06.pkl  trial_07.pkl  trial_08.pkl  trial_09.pkl
experiments/results/regression/ESR2/compressed1024-r2-opt/: trial_00.pkl  trial_01.pkl  trial_02.pkl  trial_03.pkl  trial_04.pkl  trial_05.pkl  trial_06.pkl  trial_07.pkl  trial_08.pkl  trial_09.pkl
experiments/results/regression/ESR2/exact-r2/: trial_00.pkl  (+9 more)
experiments/results/tukey/: summary_nonopt.csv
experiments/scripts/: submit_regression.sh
experiments/templates/: bo_job.sh  regression_job.sh
molcollisions/: acquisition.py  acquisition_functions.py  bo.py  bo_utils.py  datasets.py  fingerprints.py  utils.py
molcollisions/utils/: __init__.py  smiles_to_fp.py
src/molcollisions/: __init__.py
tests/: test_fingerprints.py  test_gp_integration.py  test_smiles_to_fp.py
(+995 files in other folders)
